fixed form on mobile

--- a/css/queries.css
+++ b/css/queries.css
@@ -7,154 +7,158 @@
 
 @media (max-width: 1200px) {
     header {
-      padding: 2rem 4rem;
-    }
-  
-    main {
-      padding: 8rem 2rem;
-    }
-  
-    h1 {
-      font-size: 4.5rem;
-    }
-  
-    .description {
-      font-size: 1.6rem;
-      max-width: 80rem;
-    }
-  
-    .features {
-      padding: 0 4rem;
-    }
-  
-    .feature-title {
-      font-size: 2.2rem;
-    }
-  
-    .feature-text {
-      font-size: 1.4rem;
-    }
-  }
-  
-  @media (max-width: 992px) {
-    header {
-      padding: 2rem 2rem;
-      justify-content: center;
-    }
-
-    .waitlist-btn {
-        display: none;
-    }
-  
-    h1 {
-      font-size: 4rem;
-    }
-  
-    .description {
-      font-size: 1.4rem;
-      max-width: 70rem;
-    }
-  
-    .features {
-      padding: 0 2rem;
-    }
-  
-    .feature {
-      max-width: 35rem;
-    }
-  
-    .feature-title {
-      font-size: 2rem;
-    }
-  
-    .feature-text {
-      font-size: 1.4rem;
-    }
-  }
-  
-  @media (max-width: 768px) {
-    header {
-        padding: 2.4rem 0 0 0;
-    }
-    .logo {
-        height: 60px;
-        object-fit: contain;
-    }
-  
-    main {
-      padding: 6rem 2rem;
-    }
-  
-    h1 {
-      font-size: 3.5rem;
-    }
-  
-    .description {
-      font-size: 1.4rem;
-      max-width: 60rem;
-    }
-  
-    .features {
-      flex-direction: column;
-      align-items: center;
-      padding: 0 2rem;
-    }
-  
-    .feature {
-      max-width: 100%;
-      text-align: center;
-    }
-
-    /* footer {
-        position: absolute;
-        bottom: 1px;
-    } */
-  }
-  
-  @media (max-width: 576px) {
-    body, html {
-        overflow: auto;
-    }
-
-    header {
-        padding: 2.4rem 0 0 0;
-    }
-
-    .logo {
-        height: 60px;
-        object-fit: contain;
+        padding: 2rem 4rem;
     }
 
     main {
-        padding: 3.2rem 2rem;
+        padding: 8rem 2rem;
     }
 
     h1 {
-      font-size: 3rem;
+        font-size: 4.5rem;
     }
-  
+
     .description {
-      font-size: 1.2rem;
-      max-width: 50rem;
+        font-size: 1.6rem;
+        max-width: 80rem;
     }
 
     .features {
-        margin: 8rem 2rem 12rem;
-    }
-  
-    .feature-title {
-      font-size: 1.8rem;
-    }
-  
-    .feature-text {
-      font-size: 1.2rem;
+        padding: 0 4rem;
     }
 
-    /* footer {
-        position: absolute;
-        bottom: -375px;
-    } */
-  }
+    .feature-title {
+        font-size: 2.2rem;
+    }
+
+    .feature-text {
+        font-size: 1.4rem;
+    }
+}
+  
+@media (max-width: 992px) {
+header {
+    padding: 2rem 2rem;
+    justify-content: center;
+}
+
+.waitlist-btn {
+    display: none;
+}
+
+h1 {
+    font-size: 4rem;
+}
+
+.description {
+    font-size: 1.4rem;
+    max-width: 70rem;
+}
+
+.features {
+    padding: 0 2rem;
+}
+
+.feature {
+    max-width: 35rem;
+}
+
+.feature-title {
+    font-size: 2rem;
+}
+
+.feature-text {
+    font-size: 1.4rem;
+}
+}
+
+@media (max-width: 768px) {
+header {
+    padding: 2.4rem 0 0 0;
+}
+.logo {
+    height: 60px;
+    object-fit: contain;
+}
+
+main {
+    padding: 6rem 2rem;
+}
+
+h1 {
+    font-size: 3.5rem;
+}
+
+.description {
+    font-size: 1.4rem;
+    max-width: 60rem;
+}
+
+.features {
+    flex-direction: column;
+    align-items: center;
+    padding: 0 2rem;
+}
+
+.feature {
+    max-width: 100%;
+    text-align: center;
+}
+
+/* footer {
+    position: absolute;
+    bottom: 1px;
+} */
+}
+
+@media (max-width: 576px) {
+body, html {
+    overflow: auto;
+}
+
+header {
+    padding: 2.4rem 0 0 0;
+}
+
+.logo {
+    height: 60px;
+    object-fit: contain;
+}
+
+main {
+    padding: 3.2rem 2rem;
+}
+
+h1 {
+    font-size: 3rem;
+}
+
+.description {
+    font-size: 1.2rem;
+    max-width: 50rem;
+}
+
+.features {
+    margin: 8rem 2rem 12rem;
+}
+
+.feature-title {
+    font-size: 1.8rem;
+}
+
+.feature-text {
+    font-size: 1.2rem;
+}
+
+#typeform-modal {
+    height: 75vh;
+}
+
+/* footer {
+    position: absolute;
+    bottom: -375px;
+} */
+}
   
   
 
