--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,7 @@ button {
   display: flex;
   justify-content: center;
   align-items: flex-start; 
+  flex-wrap: wrap;
   gap: 2rem;
   margin: 12.8rem auto;
   padding: 0 6rem;
